[project]
name = "knit2pdf"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "openai (>=1.59.6,<2.0.0)",
    "onnxruntime (==1.15.1)",
    "whisperx (>=3.3.1,<4.0.0)",
    "youtube-dl (==2021.12.17)",
]

[tool.poetry.scripts]
knit2pdf = "knit2pdf.cli:cli"


[tool.poetry.dependencies]
python = ">=3.9,<3.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
